fix: fixed mobile menus to show-up again on small-screens

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -513,7 +513,6 @@ p {
   overflow: hidden;
   transition: transform 0.3s ease-in-out;
   transform: translateX(-100%);
-  display: none;
 }
 @media (min-width: 1025px) {
   .mobileNav {
